--- a/src/app/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/components/user-sidebar/user-sidebar.component.html
@@ -16,11 +16,11 @@
             <img src="logo.png" class="h-12 w-12 mr-2" alt="Flowbite Logo" />
             <span class="self-center text-3xl text-purple-700 font-semibold whitespace-nowrap dark:text-white">Examy</span>
         </a>
-        <ul class="space-y-2 font-medium">
+        <ul class="font-medium">
             <li>
-                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                <a [routerLink]="['/homeStudent/main']" [routerLinkActive]="['text-purple-700', 'text-xl', 'active-link']" [routerLinkActiveOptions]="{ exact: true }"
+                    class="flex items-center px-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -31,9 +31,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                <a [routerLink]="['/homeStudent/profile']" [routerLinkActive]="['text-purple-700', 'text-xl', 'active-link']" [routerLinkActiveOptions]="{ exact: true }"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -44,9 +44,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                <a [routerLink]="['/homeStudent/notifications']" [routerLinkActive]="['text-purple-700', 'text-xl', 'active-link']" [routerLinkActiveOptions]="{ exact: true }"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -59,9 +59,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                <a [routerLink]="['/homeStudent/exams']" [routerLinkActive]="['text-purple-700', 'text-xl', 'active-link']" [routerLinkActiveOptions]="{ exact: true }"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -72,9 +72,9 @@
                 </a>
             </li>
             <li>
-                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="'text-purple-700 text-xl'" [routerLinkActiveOptions]="{ exact: true }"
-                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                <a [routerLink]="['/homeStudent/results']" [routerLinkActive]="['text-purple-700', 'text-xl', 'active-link']" [routerLinkActiveOptions]="{ exact: true }"
+                    class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path fill-rule="evenodd"
@@ -88,8 +88,8 @@
         <ul class="pt-4 mt-4 space-y-2 font-medium border-t border-gray-200 dark:border-gray-700">
             <li>
                 <a (click)="logout()"
-                    class="flex items-center cursor-pointer p-2 text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 dark:text-white group">
-                    <svg class="w-[28px] h-[28px] text-purple-700 dark:text-white" aria-hidden="true"
+                    class="flex items-center cursor-pointer p-2 text-gray-900 transition duration-75 rounded-lg hover:bg-gray-100 dark:hover:bg-gray-700 dark:text-white">
+                    <svg class="w-[25px] h-[25px] text-gray-600 dark:text-white" aria-hidden="true"
                         xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
                         viewBox="0 0 24 24">
                         <path d="M14 19V5h4a1 1 0 0 1 1 1v11h1a1 1 0 0 1 0 2h-6Z" />
