--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -1,6 +1,6 @@
 <div class="p-4 sm:ml-64 min-h-screen bg-gray-100 dark:bg-gray-900">
     <div class="max-w-3xl mx-auto p-6">
-        <h1 class="text-3xl text-center font-bold text-purple-700 dark:text-gray-200 mb-9">Notifications</h1>
+        <h1 class="text-2xl text-center font-bold text-gray-800 dark:text-gray-200 mb-9">Notifications</h1>
         @if (notifications.length === 0) {
         <p class="text-center text-gray-600 dark:text-gray-300">No notifications available.</p>
         } @else {
